Manifest is now pushed to the channel matching the private key in the config file. Signature pushed aside with the manifest so it can be checked by dappy.

--- a/dappy.config.example.json
+++ b/dappy.config.example.json
@@ -13,6 +13,6 @@
     "platform": "rchain",
     "host": "localhost",
     "port": "40401",
-    "channel_id": "mychannel"
+    "private_key": "Ethereum / Rchain private key, with or without '0x' prefix"
   }
 }
