--- a/dappy.config.example.json
+++ b/dappy.config.example.json
@@ -7,7 +7,8 @@
     "cssLibraries": ["bulma@0.x"],
     "jsLibraries": ["react@latest", "react-dom@latest", "react-redux@5.0.7"],
     "jsPath": "dist/bundle.min.js",
-    "cssPath": "dist/bundle.min.css"
+    "cssPath": "dist/bundle.min.css",
+    "htmlPath": "dist/index.html"
   },
   "options": {
     "platform": "rchain",
