--- a/dappy.config.example.json
+++ b/dappy.config.example.json
@@ -2,7 +2,7 @@
   "manifest": {
     "title": "My dapp",
     "subtitle": "My cool dapp",
-    "description": "Cool dapp to handle grosseries with friends",
+    "description": "This is a simple hello world dapp",
     "author": "Willy",
     "cssLibraries": ["bulma@0.x"],
     "jsLibraries": ["react@16.7.0", "react-dom@16.7.0", "react-redux@6.0.0"],
