Signature splitted by ; instead of ____

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start:watch": "node index --watch",
     "dappy-dev:init": "node ./node_modules/dappy-dev/init.js",
     "dappy-dev:build": "node ./node_modules/dappy-dev/build.js",
+    "dappy-dev:builded25519": "node ./node_modules/dappy-dev/builded25519.js",
     "dappy-dev:push": "node ./node_modules/dappy-dev/index.js",
     "dappy-dev:watch": "node ./node_modules/dappy-dev/index.js --watch",
     "dappy-dev:lookup": "node ./node_modules/dappy-dev/lookup.js"
