new contract, compatible with dappy 0.1.3

--- a/dappy.config.example.json
+++ b/dappy.config.example.json
@@ -16,6 +16,8 @@
     "port": "40401",
     "channel": "public channel you want to push the code onto",
     "private_key": "ED25519 private key",
-    "public_key": "ED25519 public key"
+    "public_key": "ED25519 public key",
+    "registry_uri": "registry URI for the update of the dapp (logged by rnode after push has been ran)",
+    "unforgeable_name_id": "registry URI for the update of the contract (logged by rnode after push has been ran)"
   }
 }
