--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dappy-dev",
-  "version": "0.0.3",
+  "version": "0.1.3",
   "description": "",
   "main": "index.js",
   "directories": {},
@@ -28,6 +28,7 @@
     "ethereumjs-util": "6.0.0",
     "ethers": "4.0.20",
     "grpc": "1.16.0",
+    "keccak256": "^1.0.0",
     "rchain-api": "git+https://github.com/rchain-community/RChain-API.git",
     "secp256k1": "3.5.2"
   }
