Updates for rnode 0.9.3+ pushing rholang with signature

--- a/lib/dappy.config.example.json
+++ b/lib/dappy.config.example.json
@@ -15,7 +15,7 @@
     "port": "40401",
     "private_key": "ED25519 private key, if not provided, a prompt will ask for it",
     "public_key": "ED25519 public key",
-    "registry_uri": "registry URI for the update of the dapp (logged by rnode after push has been ran)",
-    "unforgeable_name_id": "registry URI for the update of the contract (logged by rnode after push has been ran)"
+    "registry_uri": "registry URI for the update of the dapp manifest (logged by rnode after push has been ran)",
+    "unforgeable_name_id": "unforgeable name ID, blockchain address of the dapp manifest"
   }
 }
