--- a/package.json
+++ b/package.json
@@ -15,10 +15,8 @@
   "dependencies": {
     "@grpc/proto-loader": "0.3.0",
     "blakejs": "^1.1.0",
-    "ed25519": "0.0.4",
     "grpc": "1.16.0",
-    "keccak256": "1.0.0",
-    "secp256k1": "^3.7.1",
-    "tweetnacl": "git+https://github.com/dchest/tweetnacl-js.git"
+    "elliptic": "^6.5.0",
+    "rchain-toolkit": "0.0.8"
   }
 }
