--- a/lib/dappy.config.example.json
+++ b/lib/dappy.config.example.json
@@ -8,10 +8,9 @@
   "options": {
     "platform": "rchain",
     "host": "localhost",
-    "port": "40401",
+    "grpcProposePort": "40402",
     "httpPort": "40403",
     "private_key": "Secp256k1 private key, if not provided, a prompt will ask for it",
-    "public_key": "Secp256k1 public key",
     "registry_uri": "registry URI for the update of the dapp manifest (logged by rnode after push has been ran)",
     "unforgeable_name_id": "unforgeable name ID, blockchain address of the dapp manifest"
   }
