--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dappy-cli",
-  "version": "0.2.8",
+  "version": "0.2.9",
   "description": "Node JS cli to upload and update dappy applications to the blockchain",
   "main": "lib/index.js",
   "directories": {},
@@ -17,6 +17,7 @@
     "@grpc/proto-loader": "0.3.0",
     "blakejs": "^1.1.0",
     "elliptic": "^6.5.0",
-    "rchain-toolkit": "0.2.1"
+    "rchain-toolkit": "0.2.2",
+    "uuid": "3.4.0"
   }
 }
