- added imapges to .gitignore and .npmignore - v3.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,8 @@ typings/
 # next.js build output
 .next
 
-dappy.config.json
-manifest.base64
-manifest.json
+
+lib/dappy.config.json
+**/*.jpg
+**/*.png
+**/*.dpy
