- compat with files-module v0.4

--- a/lib/dappy.config.example.json
+++ b/lib/dappy.config.example.json
@@ -8,9 +8,9 @@
   },
   "options": {
     "platform": "rchain",
-    "readOnlyHost": "http://localhost",
+    "readOnlyHost": "http://observer.testnet.rchain.coop",
     "readOnlyHostHttpPort": "40403",
-    "validatorHost": "http://localhost",
+    "validatorHost": "http://node2.testnet.rchain-dev.tk",
     "validatorHostHttpPort": "40403",
     "validatorHostgrpcProposePort": "40402",
     "privateKey": "Secp256k1 private key, if not provided, a prompt will ask for it",
