--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "@grpc/proto-loader": "0.3.0",
     "blakejs": "^1.1.0",
     "elliptic": "6.5.3",
-    "rchain-toolkit": "0.2.8",
-    "rchain-token-files": "fabcotech/rchain-token#adc293753e0e8533477465ca39e26a5669046660",
+    "rchain-toolkit": "0.2.9",
+    "rchain-token": "file:../rchain-token/",
     "uuid": "3.4.0"
   }
 }
