--- a/lib/dappy.config.testnet.json
+++ b/lib/dappy.config.testnet.json
@@ -8,10 +8,8 @@
   },
   "options": {
     "platform": "rchain",
-    "readOnlyHost": "https://observer.testnet.rchain.coop",
-    "readOnlyHostHttpPort": "443",
-    "validatorHost": "https://node2.testnet.rchain-dev.tk",
-    "validatorHostHttpPort": "443",
+    "readOnly": "https://observer.testnet.rchain.coop",
+    "validator": "https://node2.testnet.rchain-dev.tk",
     "privateKey": "",
     "registryUri": "",
     "boxRegistryUri": ""
