--- a/lib/dappy.config.testnet.json
+++ b/lib/dappy.config.testnet.json
@@ -1,9 +1,8 @@
 {
-  "manifest": {
-    "title": "My dapp",
-    "jsPath": "dist/bundle.js",
-    "cssPath": "dist/bundle.css",
-    "htmlPath": "dist/bundle.html"
+  "dapp": {
+    "js": "dist/bundle.js",
+    "css": "dist/bundle.css",
+    "html": "dist/bundle.html"
   },
   "options": {
     "platform": "rchain",
