--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "dappy-cli",
-  "version": "16.0.0",
+  "version": "16.1.0",
   "description": "Node JS wrapper to push files/web apps as NFTs on RChain / rchain-token",
   "main": "lib/index.js",
+  "bin": {
+    "dappy-cli": "lib/index.js"
+  },
   "directories": {},
   "scripts": {},
   "repository": {
@@ -13,12 +16,9 @@
   "license": "MIT",
   "homepage": "https://github.com/fabcotech/dappy-cli",
   "dependencies": {
-    "@grpc/grpc-js": "^1.3.7",
-    "@grpc/proto-loader": "0.6.5",
     "blakejs": "^1.1.0",
     "elliptic": "^6.5.4",
     "rchain-token": "fabcotech/rchain-token#16.0.0",
-    "rchain-toolkit": "0.4.1",
-    "uuid": "3.4.0"
+    "rchain-toolkit": "0.4.5"
   }
 }
