--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
   "name": "dappy-cli",
-  "version": "16.1.0",
-  "description": "Node JS wrapper to push files/web apps as NFTs on RChain / rchain-token",
+  "version": "16.2.0",
+  "description": "NodeJS utility to publish dapp and manage records in the dappy name system",
   "main": "lib/index.js",
   "bin": {
     "dappy-cli": "lib/index.js"
   },
   "directories": {},
+  "keywords": [
+    "dappy",
+    "rchain",
+    "blockchain",
+    "domain",
+    "name system",
+    "dns"
+  ],
   "scripts": {},
   "repository": {
     "type": "git",
