--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "name system",
     "dns"
   ],
-  "scripts": {},
+  "scripts": {
+    "lint": "eslint lib"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fabcotech/dappy-cli.git"
@@ -28,5 +30,10 @@
     "elliptic": "^6.5.4",
     "rchain-token": "fabcotech/rchain-token#16.0.0",
     "rchain-toolkit": "0.4.5"
+  },
+  "devDependencies": {
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4"
   }
 }
