add: Push zones instead of records

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -9,6 +9,7 @@ parserOptions:
   ecmaVersion: latest
 rules:
   comma-dangle: ["error", "never"]
+  object-curly-newline: 0
   no-console: 0
   no-param-reassign: 0
   no-restricted-syntax: 
