--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "dotenv": "^16.0.0",
     "elliptic": "^6.5.4",
     "pem": "^1.14.6",
-    "rchain-token": "file:../rchain-token/",
-    "rchain-toolkit": "0.4.5"
+    "@fabcotech/rchain-token": "^16.0.0",
+    "@fabcotech/rchain-toolkit": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
