--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dappy-cli",
+  "name": "@fabcotech/dappy-cli",
   "version": "16.3.0",
   "description": "NodeJS utility to publish dapp and manage records in the dappy name system",
   "main": "lib/index.js",
