Working with rchain-toolkit 2.0.0

--- a/lib/dappy.config.example.json
+++ b/lib/dappy.config.example.json
@@ -26,6 +26,7 @@
     "platform": "rchain",
     "readOnly": "http://localhost:40403",
     "validator": "http://localhost:40403",
+    "shardId": "dev",
     "masterRegistryUri": "",
     "boxId": "",
     "privateKey": "",
