--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fabcotech/dappy-cli",
   "version": "16.4.0",
-  "description": "NodeJS utility to publish dapp and manage records in the dappy name system",
+  "description": "NodeJS utility to manage zones/records in the dappy name system, or publish dapps (100% onchain web applications)",
   "main": "lib/index.js",
   "bin": {
     "dappy-cli": "lib/index.js"
@@ -30,8 +30,8 @@
     "dotenv": "^16.0.0",
     "elliptic": "^6.5.4",
     "pem": "^1.14.6",
-    "@fabcotech/rchain-token": "^16.0.0",
-    "@fabcotech/rchain-toolkit": "^1.0.0"
+    "@fabcotech/rchain-token": "16.0.2",
+    "@fabcotech/rchain-toolkit": "^2.0.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
