--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
   "license": "MIT",
   "homepage": "https://github.com/fabcotech/dappy-cli",
   "dependencies": {
+    "@fabcotech/rchain-token": "^17.0.5",
+    "@fabcotech/rchain-toolkit": "^3.0.0",
     "blakejs": "^1.1.0",
     "dotenv": "^16.0.0",
     "elliptic": "^6.5.4",
-    "pem": "^1.14.6",
-    "@fabcotech/rchain-token": "17.0.4",
-    "@fabcotech/rchain-toolkit": "^2.0.0"
+    "pem": "^1.14.6"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
