DIsplay the TLD with the networkId

--- a/.gitignore
+++ b/.gitignore
@@ -61,7 +61,10 @@ typings/
 .next
 
 lib/dappy.config.json
+lib/dappy.config*
 lib/dappyNetwork.js
+lib/*.crt
+lib/*.key
 **/*.jpg
 **/*.png
 **/*.dpy
