--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fabcotech/dappy-cli",
-  "version": "17.8.2",
+  "version": "17.8.8",
   "description": "NodeJS utility to manage zones/records in the dappy name system, or publish dapps (100% onchain web applications)",
   "main": "lib/index.js",
   "bin": {
@@ -25,10 +25,8 @@
   "license": "MIT",
   "homepage": "https://github.com/fabcotech/dappy-cli",
   "dependencies": {
-    "@fabcotech/dappy-lookup": "^2.3.6",
-    "@fabcotech/gossip": "^1.0.0",
-    "@fabcotech/rchain-token": "18.0.1",
-    "@fabcotech/rchain-toolkit": "^3.0.1",
+    "@fabcotech/dappy-lookup": "latest",
+    "@fabcotech/gossip": "latest",
     "blakejs": "^1.1.0",
     "dotenv": "^16.0.0",
     "elliptic": "^6.5.4",
