--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@fabcotech/dappy-cli",
-  "version": "17.8.8",
+  "version": "17.9.0",
   "description": "NodeJS utility to manage zones/records in the dappy name system, or publish dapps (100% onchain web applications)",
   "main": "lib/index.js",
   "bin": {
@@ -30,8 +30,7 @@
     "blakejs": "^1.1.0",
     "dotenv": "^16.0.0",
     "elliptic": "^6.5.4",
-    "lodash.isequal": "^4.5.0",
-    "pem": "^1.14.6"
+    "lodash.isequal": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "^8.11.0",
