--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@fabcotech/dappy-cli",
   "version": "17.9.9",
-  "description": "NodeJS utility to manage zones/records in the dappy name system, or publish dapps (100% onchain web applications)",
+  "description": "Command line interface to manage domains, subdomains and TLS certificates in the dappy name system",
   "main": "lib/index.js",
   "bin": {
     "dappy-cli": "lib/index.js"
